--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="caja">
+    <img src="./assets/img/cat.gif" class="caja__imagen">
+    <img src="./assets/img/dog.png" class="caja__imagen1">
+ </div>
 </body>
 </html>
